Fix header on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -135,6 +135,11 @@ html {
   .tempestas-header-container {
     padding-right: 5px;
     padding-left: 5px;
+    flex-flow:column;
+  }
+
+  .tempestas-header-navigation{
+    width:100%;
   }
 
   .thn-links a:link {
@@ -272,6 +277,7 @@ button[class$='-btn'] {
   box-shadow: 0px 6px 15px -2px rgba(16, 24, 40, 0.08),
     0px 6px 15px -2px rgba(16, 24, 40, 0.08);
   min-height: 45px;
+  white-space: nowrap;
 }
 
 .primary-btn {
